# ClearCut

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
u2net/: __init__.py  downloader.py  infer.py  model.py
